# gcp-role-lookup

./: .gitignore  Architecture.md  ContainerFile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_linux.sh  setup_windows.ps1
.claude/: settings.local.json
.streamlit/: config.toml
app/: formatter.py  main.py  matcher.py  role_loader.py  supersession.py
app/page_views/: deduplicate.py  find_role.py  help.py  inspect.py  permissions.py  resolve.py
app/pages/: inspect.py  permissions.py  resolve.py
data/: gcp_roles.json
docs/: executive-overview.html
docs/superpowers/plans/: 2026-03-17-find-smallest-role.md  2026-03-17-inspector-enhancements.md  2026-03-17-navigation-role-inspector-permission-search.md  2026-03-17-output-format-toggle.md  2026-03-17-permission-search-enhancement.md  2026-03-17-pyproject-packaging.md  2026-03-19-deduplicate-roles.md  2026-03-19-try-it-section.md
docs/superpowers/specs/: 2026-03-16-navigation-role-inspector-permission-search-design.md  2026-03-17-find-smallest-role-design.md  2026-03-17-inspector-enhancements-design.md  2026-03-17-output-format-toggle-design.md  2026-03-17-permission-search-enhancement-design.md  2026-03-17-pyproject-packaging-design.md  2026-03-19-deduplicate-roles-design.md  2026-03-19-try-it-section-design.md
scripts/: refresh_roles.py
tests/: test_find_role_logic.py  test_formatter_dedup.py  test_inspect_logic.py  test_matcher.py  test_permissions_logic.py  test_role_loader.py  test_supersession_dedup.py
